syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.enmo.dbaas.grpc.v3.common";

message ResultMessageV3 {
  string executeCode = 1;
  string errorMsg = 2;
  string resultMsg = 3;
  string requestId = 4;
}